test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_6.snaphost
HTTP/2.0 200 OK
Content-Length: 39
Content-Type: application/json
Date: Mon, 31 Mar 2025 12:45:35 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=2d549c805065c765810442bca5a24f63ca5de3db; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"20.171.103.251"}